--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/**
+hero-subtitle/**
 * Template Name: DevFolio - v4.9.0
 * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
 * Author: BootstrapMade.com
@@ -11,6 +11,7 @@
 body {
   background-color: #f5f5f5;
   color: #4e4e4e;
+  scroll-behavior: smooth;
 }
 
 h1,
@@ -1302,7 +1303,7 @@ a:hover {
 .card-blog .post-date {
   color: #4e4e4e;
   display: inline-block;
-  float: right;
+  float:none;
 }
 
 /*--------------------------------------------------------------
